feat(api/beatmaps): документация
