# api/beatmaps.go
@@ -14,10 +14,19 @@ type BeatmapHandlers struct {
 	App *app.App
 }
 
+// Show beatmap by id
+//
+// @Router /api/v2/beatmaps/{beatmap_id} [get]
+// @Tags Beatmap
+// @Summary Return beatmap by id
+// @Param beatmap_id path string true "beatmap id"
+//
+// @Success 200 {object} entity.SingleBeatmap
+// @Success 400 {object} errors.ResponseFormat
 func (h *BeatmapHandlers) Show(c echo.Context) error {
 	ctx, _ := c.Get("context").(context.Context)
 
-	beatmapID, err := strconv.ParseUint(c.Param("id"), 10, 32)
+	beatmapID, err := strconv.ParseUint(c.Param("beatmap"), 10, 32)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, "Invalid beatmap id")
 	}
@@ -30,6 +39,17 @@ func (h *BeatmapHandlers) Show(c echo.Context) error {
 	return c.JSON(200, beatmaps)
 }
 
+// Lookup beatmap by id, checksum, filename
+//
+// @Router /api/v2/beatmaps/lookup [get]
+// @Tags Beatmap
+// @Summary Lookup beatmap by id, checksum, filename
+// @Param id query string false "beatmap id"
+// @Param checksum query string false "beatmap file md5"
+// @Param filename query string false "beatmap filename (legacy)"
+//
+// @Success 200 {object} entity.SingleBeatmap
+// @Success 400 {object} errors.ResponseFormat
 func (h *BeatmapHandlers) Lookup(c echo.Context) (err error) {
 	ctx, _ := c.Get("context").(context.Context)
 
@@ -60,10 +80,26 @@ func (h *BeatmapHandlers) Lookup(c echo.Context) (err error) {
 	return c.JSON(200, beatmap)
 }
 
+// Scores submitted to selected beatmap
+//
+// @Router /api/v2/beatmaps/{beatmap}/scores [get]
+// @Tags Beatmap
+// @Summary Scores submitted to selected beatmap
+// @Param beatmap_id path string true "beatmap id"
+// @Param type query string false "score type"
+// @Param mode query string false "osu! game mode (std, mania, ctb and etc)"
+//
+// @Success 200 {object} entity.SingleBeatmap
+// @Success 400 {object} errors.ResponseFormat
 func (h *BeatmapHandlers) Scores(c echo.Context) (err error) {
 	params := request.GetBeatmapScores{}
 	if err := c.Bind(&params); err != nil {
 		return err
+	}
+
+	_, err = strconv.ParseUint(c.Param("beatmap"), 10, 32)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, "Invalid beatmap id")
 	}
 
 	return c.JSON(http.StatusOK, nil)
